--- a/app/src/main/res/layout/single_bill_custom.xml
+++ b/app/src/main/res/layout/single_bill_custom.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:textAlignment="center"
     tools:context=".MainActivity4">
 
     <TextView
@@ -34,7 +35,7 @@
         app:layout_constraintVertical_bias="0.218" />
 
     <EditText
-        android:id="@+id/editTextNumber3"
+        android:id="@+id/input_bill_single_custom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:autofillHints=""
@@ -52,7 +53,7 @@
         app:layout_constraintVertical_bias="0.371" />
 
     <EditText
-        android:id="@+id/editTextNumber5"
+        android:id="@+id/input_tip_single_custom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:autofillHints=""
@@ -69,7 +70,7 @@
         app:layout_constraintVertical_bias="0.465" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/display_tip_single_custom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/tip_0"
@@ -84,10 +85,11 @@
         app:layout_constraintVertical_bias="0.603" />
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/display_total_single_custom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/new_total_bill_0"
+        android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
