--- a/app/src/main/res/layout/split_bill_custom.xml
+++ b/app/src/main/res/layout/split_bill_custom.xml
@@ -21,7 +21,7 @@
         app:layout_constraintVertical_bias="0.111" />
 
     <EditText
-        android:id="@+id/editTextNumber6"
+        android:id="@+id/input_bill_split_custom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:autofillHints=""
@@ -39,7 +39,7 @@
         app:layout_constraintVertical_bias="0.258" />
 
     <EditText
-        android:id="@+id/editTextNumber7"
+        android:id="@+id/input_numOfPeople_split_custom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -57,7 +57,7 @@
         android:autofillHints="" />
 
     <EditText
-        android:id="@+id/editTextNumber8"
+        android:id="@+id/input_tip_split_custom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:autofillHints=""
@@ -88,10 +88,11 @@
         app:layout_constraintVertical_bias="0.164" />
 
     <TextView
-        android:id="@+id/textView16"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/display_tipPerPerson_split_custom"
+        android:layout_width="233dp"
+        android:layout_height="79dp"
         android:text="@string/_0_tip_per_person"
+        android:textAlignment="center"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -99,13 +100,15 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.609" />
+        app:layout_constraintVertical_bias="0.576"
+        tools:ignore="TextSizeCheck" />
 
     <TextView
-        android:id="@+id/textView18"
+        android:id="@+id/display_bill_split_custom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/new_total_bill_0"
+        android:text="@string/new_total_per_person"
+        android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
