--- a/app/src/main/res/layout/single_bill_default.xml
+++ b/app/src/main/res/layout/single_bill_default.xml
@@ -4,13 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/greey"
     android:textAlignment="textEnd"
     tools:context=".MainActivity3">
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/app_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/toolbar4"
+        app:srcCompat="@drawable/receipt" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/cabin_sketch"
         android:text="@string/single_person"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -19,22 +32,23 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.151" />
+        app:layout_constraintVertical_bias="0.123" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="136dp"
         android:layout_height="37dp"
+        android:fontFamily="casual"
         android:text="@string/default_20"
         android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.219"
+        app:layout_constraintVertical_bias="0.201"
         tools:ignore="TextSizeCheck" />
 
     <EditText
@@ -43,22 +57,24 @@
         android:layout_height="wrap_content"
         android:autofillHints=""
         android:ems="10"
+        android:fontFamily="@font/cabin_sketch"
         android:hint="@string/total_bill"
         android:inputType="number|numberDecimal"
         android:minHeight="48dp"
         android:textColorHint="#8D6E63"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.464" />
+        app:layout_constraintVertical_bias="0.412" />
 
     <TextView
         android:id="@+id/display_tip_single_default"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/tip_0"
+        android:fontFamily="casual"
         android:textAlignment="center"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -72,7 +88,7 @@
         android:id="@+id/display_total_single_default"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/new_total_bill_0"
+        android:fontFamily="casual"
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -105,10 +121,10 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.816" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/mex_sind_button_cust"
         android:layout_width="139dp"
         android:layout_height="57dp"
         android:text="@string/custom_percentage"
@@ -116,7 +132,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/toolbar4"
-        app:layout_constraintVertical_bias="0.28"
+        app:layout_constraintVertical_bias="0.261"
         tools:ignore="TextSizeCheck" />
 
     <androidx.appcompat.widget.Toolbar
@@ -124,12 +140,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="40dp"
-        android:background="@color/white"
+        android:background="#777777"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintBottom_toTopOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="VisualLintBounds" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
